<resources>
    <string name="app_name">Pedidos Iglesia</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="msg_lista_actividad">Lista Actividades</string>
    <string name="msg_lista_categoria">Lista Categorias</string>
    <string name="msg_Reportes">Reportes</string>
    <string name="msg_lista_productos">Lista Productos</string>
    <string name="msg_registrar_Actividad"> Nueva Actividad</string>
    <string name="msg_registrar_Categoria"> Nueva Categoria</string>
    <string name="msg_registrar_Producto"> Nuevo Producto</string>
    <string name="msg_nombre_Producto">Nombre Producto</string>
    <string name="msg_nombre_Categoria">Categoria</string>
    <string name="msg_valor_Producto">Valor Unitario ($)</string>
    <string name="msg_Fecha_Actividad">Fecha Actividad</string>
    <string name="msg_Seleccione_Tipo_Actividad">Tipo Actividad</string>
    <string name="title_activity_barra__menu">Pedidos</string>
    <string name="msg_Tomar_Pedidos">Tomar Pedidos</string>
    <string name="msg_menu_Categoria"> Detalles Categoria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="msg_nombre_Reporte1">Reporte 1</string>
    <string name="msg_nombre_Reporte2">Reporte 2</string>
    <string name="msg_nombre_Reporte3">Reporte 3</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
