<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    tools:context="com.example.equipo.pedidosiglesia.Controller.Fragment_Registrar_Producto">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_registrar_Producto"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="@color/abc_input_method_navigation_guard" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_nombre_Producto"
        android:gravity="center"
        android:textSize="22dp"
        android:layout_marginTop="45dp"
        android:textColor="#1764bb"
        android:textColorHighlight="#0b29bf"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal|top" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="55dp"
        android:layout_marginTop="75dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:hint="Producto"
        android:focusable="true"
        android:id="@+id/txt_Nombre_producto"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_valor_Producto"
        android:gravity="center"
        android:textSize="22dp"
        android:layout_marginTop="150dp"
        android:textColor="#1764bb"
        android:textColorHighlight="#0b29bf"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal|top" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="55dp"
        android:layout_marginTop="178dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:hint="Valor Unitario "
        android:focusable="true"
        android:id="@+id/txt_valor_uniario"
        />

    <Button
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:text="Guardar"
        android:id="@+id/btnRegistrarProducto"
        android:layout_gravity="center_horizontal|bottom"
        android:textStyle="bold"
        />


</FrameLayout>
