<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="275dp"
    tools:context="com.example.equipo.pedidosiglesia.Controller.Fragment_Lista_Actividades">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_registrar_Actividad"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textColor="@color/abc_input_method_navigation_guard" />

    <Spinner
        android:layout_width="254dp"
        android:layout_height="56dp"
        android:id="@+id/spinner_Categoria_Registrar_Actividad"
        android:layout_gravity="center_horizontal|top"
        android:spinnerMode="dropdown"
        android:layout_marginTop="70dp"
        android:paddingTop="5dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:background="@drawable/abc_cab_background_top_mtrl_alpha" />

    <Button
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:text="Guardar"
        android:id="@+id/btnRegistrarActividad"
        android:layout_gravity="center_horizontal|bottom"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_Fecha_Actividad"
        android:layout_marginTop="135dp"
        android:gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="#1764bb"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_Seleccione_Tipo_Actividad"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_marginTop="45dp"
        android:textColor="#1764bb"
        android:textColorHighlight="#0b29bf"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal|top" />

    <EditText
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_fecha_registrar_actividad"
        android:layout_gravity="center_horizontal|bottom"
        android:hint="Seleccione Fecha"
        android:clickable="true"
        android:textAlignment="center"
        android:layout_marginBottom="65dp"
        android:focusable="false"
        />

</FrameLayout>
